8191338: aarch64: fails to build after 8189745

Reviewed-by: aph, drwhite, dchuyko